[package]
name = "demo-reqwest"
version = "0.1.0"
authors = ["Caleb Stanford <caleb.pirsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
reqwest = { version = "0.11.0", features = ["blocking"] }
structopt = "0.3.21"
